# vib-plus

./: .gitignore  README.md  publish-github.ps1  update-repo.ps1
compiler/: README.md  vibc.ps1
compiler/vibc/: ast.py  cli.py  irgen.py  lexer.py  parser.py  tokens.py
docs/: AI_DISCLOSURE.md  BUILD_ROADMAP.md  GAMES.md  GAME_API.md  GETTING_STARTED.md  LANGUAGE.md  SDL_INTEGRATION.md  SELF_HOSTED_STACK.md
examples/games/: README.md  chess.vp  flappy.vp  pong.vp
runtime/: README.md
runtime/platform/sdl/: CMakeLists.txt  README.md  build-smoke.ps1  chess_main.c  flappy_main.c  pong_main.c  sdl_backend.c  sdl_backend.h  smoke_main.c
std/: console.vp  game.vp
